# MyWorkout

./: .env  .gitignore  README.md  docker-compose.production.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: deploy.yml
.husky/: pre-commit
api/: Dockerfile  db.sqlite3  manage.py  pyproject.toml
api/api/: asgi.py  settings.py  urls.py  wsgi.py
api/api/settings/: base.py  local.py  production.py
api/env/: local.env  production.env
api/users/: adapters.py  admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
api/users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
api/workouts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
api/workouts/migrations/: 0001_initial.py  0002_auto_20211215_1137.py  0003_auto_20211215_1430.py  0004_alter_exercise_name.py  0005_auto_20211222_1601.py
data/certbot/conf/accounts/acme-staging-v02.api.letsencrypt.org/directory/da994e2f7722ce261436051e54fa4a9d/: meta.json  private_key.json  regr.json
data/certbot/conf/csr/: 0000_csr-certbot.pem
data/certbot/conf/keys/: 0000_key-certbot.pem
env/: local.env  production.env  testing.env
frontend/: Dockerfile  next-i18next.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/env/: production.env
frontend/public/fonts/: data.json
frontend/public/locales/en/: activate.json  common.json  header.json  login.json  navigationBar.json  passwordReset.json  passwordResetConfirm.json  register.json  workout.json
frontend/public/locales/pl/: activate.json  common.json  header.json  login.json  navigationBar.json  passwordReset.json  passwordResetConfirm.json  register.json  workout.json
frontend/src/app/: store.js
frontend/src/components/alerts/: Error.js  Success.js
frontend/src/components/buttons/: BaseButton.js  RoundedButton.js  SocialAuthButton.js  TableButton.js
frontend/src/components/buttons/social/: FacebookButton.js  GoogleButton.js
frontend/src/components/charts/: LineChart.js
frontend/src/components/divs/: CollapsibleDiv.js
frontend/src/components/footer/: index.js
frontend/src/components/forms/: LoginForm.js
frontend/src/components/forms/Login/: LoginForm.js
frontend/src/components/forms/PasswordReset/: PasswordResetForm.js  initialValues.js  validationSchema.js
frontend/src/components/forms/PasswordResetConfirm/: PasswordResetConfirmForm.js  initialValues.js  validationSchema.js
frontend/src/components/forms/Register/: RegisterForm.js  initialValues.js  validationSchema.js
frontend/src/components/forms/Workout/: ExerciseForm.js  WorkoutForm.js  initialValues.js  validationSchema.js
frontend/src/components/header/: Header.js
frontend/src/components/inputs/: ExerciseSelect.js  StyledTextArea.js  StyledTextInput.js
frontend/src/components/layouts/: Layout.js
frontend/src/components/navbar/: Item.js  Navbar.js
frontend/src/components/permissions/: LoggedInPermission.js  LoggedOutPermission.js  PermissionWrapper.js
frontend/src/components/sections/: BaseSection.js
frontend/src/components/tables/: WorkoutActivities.js  WorkoutActivity.js  WorkoutPlanActivities.js  WorkoutPlans.js
frontend/src/features/: appSlice.js  authSlice.js  currentUserSlice.js
frontend/src/pages/: 404.js  500.js  _app.js  _documents.js  index.js
frontend/src/pages/activate/: index.js
frontend/src/pages/index/: Header.js  LoginForm.js
frontend/src/pages/login/: LoginForm.js  index.js
frontend/src/pages/myworkouts/: index.js
frontend/src/pages/password-reset/: index.js
frontend/src/pages/password-reset-confirm/: index.js
frontend/src/pages/progressions/: index.js
frontend/src/pages/workout-plans/: [slug].js  add-workout.js  index.js
frontend/src/pages/workouts/: [slug].js  index.js
frontend/src/services/: auth.service.js  axios.js  cookie.service.js  workout.service.js
frontend/src/styles/: globals.css  palette.css
frontend/src/utils/: extraFunctions.js
nginx/: Dockerfile  nginx.local.conf  nginx.prod.conf
nginx/env/: local.env
(+3 files in other folders)
