[tool.poetry]
name = "api"
version = "0.1.0"
description = "MyWorkout Api"
authors = ["Mateusz Marzec"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.9"
gunicorn = "^20.1.0"
uvicorn = "^0.15.0"
sentry-sdk = "^1.4.3"
psycopg2-binary = "^2.9.2"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.10b0"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
'''

[tool.isort]
skip = '''
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
'''